# Detail-Driven-Manager

./: LICENSE.txt  README.md  main.tf  variables.tf
FlaskApp/: Dockerfile  build.sh  notes.txt  pyproject.toml  requirements.txt
FlaskApp/app/: app.py  pyproject.toml  requirements.txt
FlaskApp/app/templates/: login.html
FlaskApp/tests/: login.py
MySql/: DatabaseScheme.sql  DatabaseScheme.xlsx
WebAppDocker/: Dockerfile  app.py  pyproject.toml  requirements.txt
WebAppDocker/templates/: login.html
